gccida/g1/first_insn_after_basic_block_note
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/first_insn_after_basic_block_note/src/flow.c:859:30: error: use of undeclared identifier 'to'
fancy_abort( ( const char *)&to, 400, "first_insn_after_basic_block_note"); 
                             ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/first_insn_after_basic_block_note/src/obj/flow.o] Error 1
